Version 2.0 - 2018-04-13
* BUG#8177 Fix a crash on endorsement set if endorsement list is empty
* BUG#7653 Shorten the Endorsement Set Sequence technical name

Version 1.14 - 2017-11-09
* BUG#7065 Adding explicity the selection method of the contact on endorsement set

Version 1.12 - 2017-04-28
* FEA#0000 Make endorsement sets Printable

Version 1.10 - 2016-11-02
* FEA#0000 Add endorsement set decline and apply event type

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add endorsement set number
* FEA#0000 Module creation