@@ -1,3 +1,5 @@
+* BUG#9509 Correction d'un crash sur l'impression de courrier d'avenant si liste d'ensemble d'avenants est nulle
+
 Version 2.0 - 2018-04-13
 * BUG#8177 Correction d'un crash sur la consultation de liste d'ensemble d'avenants dans le cas où cette dérnière ne contient pas d'avenants
 * BUG#7653 Réduction de la longueur du nom technique de la Séquence du numéro d'ensemble d'avenants
